--- a/Chart.yaml
+++ b/Chart.yaml
@@ -20,8 +20,8 @@ description: A Helm chart for Thingsboard
 type: application
 version: 0.1.1
 appVersion: 3.4.0
-icon: https://avatars.githubusercontent.com/u/24291394?s=200&v=4
-home: https://github.com/thingsboard/thingsboard-ce-k8s/
+icon: https://avatars.githubusercontent.com/u/120170346
+home: https://github.com/huinnoaim/thingsboard-helm/
 dependencies:
   - name: postgresql-ha
     version: 8.5.2
