--- a/thingsboard/Chart.yaml
+++ b/thingsboard/Chart.yaml
@@ -23,16 +23,16 @@ appVersion: 3.4.0
 icon: https://avatars.githubusercontent.com/u/24291394?s=200&v=4
 home: https://github.com/thingsboard/thingsboard-ce-k8s/
 dependencies:
-  - name: postgresql
-    version: 15.1.0
+  - name: postgresql-ha
+    version: 10.0.7
     repository: https://charts.bitnami.com/bitnami
   - name: cassandra
-    version: 9.1.8
+    version: 9.7.7
     repository: https://charts.bitnami.com/bitnami
     condition: cassandra.enabled
   - name: kafka
-    version: 15.3.4
+    version: 19.1.5
     repository: https://charts.bitnami.com/bitnami
   - name: redis
-    version: 16.4.5
+    version: 17.4.2
     repository: https://charts.bitnami.com/bitnami
