--- a/values.yaml
+++ b/values.yaml
@@ -17,7 +17,7 @@
 global:
   image:
     server: docker.io
-    tag: "3.4.0"
+    tag: "3.4.3"
     pullSecrets: []
     pullPolicy: Always
   jsonLogs: false
@@ -36,14 +36,6 @@ serviceAccount:
 
 ingress:
   enabled: false
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - chart-cdss.local
-  # Enable or disable tls, same host as above
-  tls: false
-
 
 node:
   # kind can be either Deployment or StatefulSet
@@ -60,9 +52,11 @@ node:
     http: 8080
     rpc: 9090
   podAnnotations: {}
-  podSecurityContext: {}
+  podSecurityContext:
+    {}
     # fsGroup: 2000
-  securityContext: {}
+  securityContext:
+    {}
     # capabilities:
     #   drop:
     #   - ALL
@@ -70,9 +64,10 @@ node:
     # runAsNonRoot: true
     # runAsUser: 1000
   service:
-    type: NodePort
+    type: ClusterIP
     port: 8080
-  resources: {}
+  resources:
+    {}
     # We usually recommend not to specify default resources and to leave this as a conscious
     # choice for the user. This also increases chances charts run on environments with little
     # resources, such as Minikube. If you do want to specify resources, uncomment the following
@@ -102,7 +97,7 @@ jsexecutor:
     #server: docker.io
     #pullPolicy: Always
     #tag: "X.Y.Z"
-  replicaCount: 5
+  replicaCount: 1
   podAnnotations: {}
   podSecurityContext: {}
   securityContext: {}
@@ -139,7 +134,7 @@ mqtt:
   podSecurityContext: {}
   securityContext: {}
   service:
-    type: NodePort
+    type: LoadBalancer
     port: 8883
   resources: {}
   autoscaling:
@@ -171,7 +166,7 @@ http:
   podSecurityContext: {}
   securityContext: {}
   service:
-    type: NodePort
+    type: ClusterIP
     port: 8082
   resources: {}
   autoscaling:
@@ -193,7 +188,7 @@ coap:
     #server: docker.io
     #pullPolicy: Always
     #tag: "X.Y.Z"
-  replicaCount: 0
+  replicaCount: 1
   port:
     number: 8083
     protocol: UDP
@@ -203,13 +198,13 @@ coap:
   podSecurityContext: {}
   securityContext: {}
   service:
-    type: NodePort
+    type: ClusterIP
     port: 8083
   resources: {}
   autoscaling:
     enabled: false
-    minReplicas: 0
-    maxReplicas: 0
+    minReplicas: 1
+    maxReplicas: 100
     targetCPUUtilizationPercentage: 80
     # targetMemoryUtilizationPercentage: 80
   nodeSelector: {}
@@ -227,15 +222,15 @@ webui:
     #tag: "X.Y.Z"
   replicaCount: 1
   port:
-    number: 8084
+    number: 80
     protocol: TCP
     name: http
   podAnnotations: {}
   podSecurityContext: {}
   securityContext: {}
   service:
-    type: NodePort
-    port: 8084
+    type: LoadBalancer
+    port: 80
   resources: {}
   autoscaling:
     enabled: false
@@ -258,30 +253,32 @@ cassandra:
   # for an postgresql database set cassandra.enabled as false
   # for an hybrid database set cassandra.enabled as true
   enabled: false
-  replicaCount: 0
+  replicaCount: 1
   dbUser:
-    password: malboro88
+    password: pwsetplease
 
 postgresql-ha:
   nameOverride: pg
   postgresql:
     database: thingsboard
     replicaCount: 1
-    username: postgres
-    password: malboro88
-    repmgrDatabase: repmgr
-    repmgrPassword: malboro88
-    hostNetwork: true
+    password: pwsetplease
+    repmgrPassword: pwsetplease
+  postgresqlImage:
+    tag: 14
   pgpool:
-    adminUsername: admin
-    adminPassword: malboro88
-    useLoadBalancing: off
+    adminPassword: pwsetplease
+    replicaCount: 1
+    useLoadBalancing: false
+    maxPool: 70
+  pgpoolImage:
+    tag: 4
 
 redis:
   # Set architecture to either standalone or replication
   architecture: standalone
   auth:
-    password: malboro88
+    password: pwsetplease
   master:
     kind: Deployment
     persistence:
@@ -289,7 +286,7 @@ redis:
     disableCommands:
       - FLUSHALL
   replica:
-    replicaCount: 1
+    replicaCount: 0
     persistence:
       enabled: false
 
